--- a/src/App.css
+++ b/src/App.css
@@ -333,7 +333,13 @@
 .app-body {
   flex: 1;
   display: flex;
+  flex-direction: column;
   overflow: hidden;
 }
 
+.app-body-content {
+  flex: 1;
+  display: flex;
+  overflow: hidden;
+}
 
